--- a/IPM-Angular/src/app/adminsuccesslogin/admin-policys/add-policy/add-policy.component.css
+++ b/IPM-Angular/src/app/adminsuccesslogin/admin-policys/add-policy/add-policy.component.css
@@ -1,9 +1,7 @@
 #policycatagory {
-    width: 20vw;
+    width: 100%;
     padding: 5px;
     border-radius: 5px;
-    margin-left: 10px;
-    background-color: aquamarine;
 }
 
 .custom-container {
