--- a/IPM-Angular/src/app/adminsuccesslogin/admin-policys/add-policy/add-policy.component.html
+++ b/IPM-Angular/src/app/adminsuccesslogin/admin-policys/add-policy/add-policy.component.html
@@ -11,15 +11,14 @@
                         <label for="policycatagory" class="col-md-3 col-form-label">Choose Category:</label>
                         <div class="col-md-9">
                             <div class="input-group">
-                                <select [(ngModel)]="addData.policycatagory" name="policycatagory" id="policycatagory"
-                                    class="form-control" style="background-color: white;">
+                                <select [(ngModel)]="addData.policycatagory" name="policycatagory" id="policycatagory">
                                     <option value="" disabled selected>Select a category</option>
                                     <option value="Life Insurance">Life Insurance</option>
                                     <option value="Travel Insurance">Travel Insurance</option>
                                     <option value="Vehicle Insurance">Vehicle Insurance</option>
                                     <option value="Health Insurance">Health Insurance</option>
                                 </select>
-                             
+
                             </div>
                         </div>
                     </div>
