--- a/IPM-Angular/src/app/ureg/ureg.component.html
+++ b/IPM-Angular/src/app/ureg/ureg.component.html
@@ -36,7 +36,7 @@
             <label class="form-label">Phone Number</label>
           </div>
           <div class="col-md-2">
-            <input classd="form-control" type="text" placeholder="Enter your number" required [(ngModel)]="user.cphno"
+            <input classd="form-control" type="number" placeholder="Enter your number" required [(ngModel)]="user.cphno"
               id="cphno" name="cphno">
           </div>
         </div>
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-2">
 
-            <input classd="form-control" type="text" placeholder="Enter your age" [(ngModel)]="user.cage" id="cage"
+            <input classd="form-control" type="number" placeholder="Enter your age" [(ngModel)]="user.cage" id="cage"
               name="cage">
           </div>
         </div>
