--- a/IPM-Angular/src/app/user-sucess-login/profile/profile.component.html
+++ b/IPM-Angular/src/app/user-sucess-login/profile/profile.component.html
@@ -32,7 +32,7 @@
         <label class="form-label">Phone Number</label>
       </div>
       <div class="col-md-5">
-        <input class="form-control" type="tel" placeholder="Enter your number" required [(ngModel)]="this.user.cphno"
+        <input class="form-control" type="number" placeholder="Enter your number" required [(ngModel)]="this.user.cphno"
           id="cphno" name="cphno">
       </div>
     </div>
